--- a/index.css
+++ b/index.css
@@ -87,4 +87,14 @@ border-color: LightGrey;
 box-shadow: 1px 1px 0px Gray;
 z-index: 1010;
 }
-
+.button {
+  font: bold 11px Arial;
+  text-decoration: none;
+  background-color: #EEEEEE;
+  color: #333333;
+  padding: 2px 6px 2px 6px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
